test/scc/type/semantic-errors/002.t
struct
{
    struct
    {
        struct
        {
            int b[0];
        };
    };
    int c;
};